--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,7 +33,7 @@ byteorder = "1.0.0"
 crc = { version = "1.3.0", optional = true }
 digest = "0.9"
 libflate = "1"
-num-bigint = "0.2.6"
+num-bigint = "0.3.0"
 rand = "0.4"
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
@@ -42,7 +42,7 @@ strum = "0.18.0"
 strum_macros = "0.18.0"
 thiserror = "1.0"
 typed-builder = "0.5.1"
-uuid = { version = "0.8.1", features = ["v4"] }
+uuid = { version = "0.8.1", features = ["serde", "v4"] }
 zerocopy = "0.3.0"
 
 [dev-dependencies]
@@ -50,3 +50,4 @@ md-5 = "0.9"
 lazy_static = "^1.1"
 sha2 = "0.9"
 criterion = "0.3.1"
+
